Bug 1116716 - Store animated frames in the SurfaceCache. r=tn